app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
spec:
  nodeSelector:
    tier: app
  containers:
    - name: c
      image: nginx
