bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad
spec:
  containers:
    - name: c
      image: nginx
      securityContext:
        privileged: true
        runAsUser: 0
