batch-with-toleration.yaml
apiVersion: v1
kind: Pod
metadata:
  name: batch-with-toleration
spec:
  nodeSelector:
    kubernetes.io/hostname: k3d-lab-agent-0
  tolerations:
    - key: dedicated
      operator: Equal
      value: batch
      effect: NoSchedule
  containers:
    - name: c
      image: nginx
