cfg-demo.yaml
apiVersion: v1
kind: Pod
metadata: { name: cfg-demo }
spec:
  containers:
    - name: c
      image: busybox
      command: ["sh","-c","env | grep -E 'GREETING|LOG'; ls /etc/cfg; cat /etc/cfg/GREETING; sleep 3600"]
      volumeMounts:
        - name: cfg-vol                        # 3. as files
          mountPath: /etc/cfg
  volumes:
    - name: cfg-vol
      configMap: { name: app-config }
