ci-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ci-test
  namespace: prod
spec:
  serviceAccountName: ci-bot
  containers:
    - name: kubectl
      image: bitnami/kubectl
      command:
        - sleep
        - "3600"
