priv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: priv
spec:
  imagePullSecrets:
    - name: regcred
  containers:
    - name: c
      image: registry.example.com/team/app:1.0
