statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: { name: web }
spec:
  serviceName: web-headless    # the headless Service from Lab 4
  replicas: 3
  selector: { matchLabels: { app: web-sts } }
  template:
    metadata: { labels: { app: web-sts } }
    spec:
      containers:
        - name: web
          image: nginx
          ports: [{ containerPort: 80 }]
