cpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpu
  template:
    metadata:
      labels:
        app: cpu
    spec:
      containers:
        - name: c
          image: registry.k8s.io/hpa-example
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cpu
spec:
  selector:
    app: cpu
  ports:
    - port: 80
